# words

./: .gitignore  README.md  count_py_lines.sh
language-learning-bot/: .env.example  .gitignore  README.md  create_project_structure.py  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run_export_env.sh  run_tests.sh  setup.py  start_1_db.sh  start_2_backend.sh  start_3_frontend.sh  start_3_frontend_auto_reload.sh  start_4_writing_images_service.sh
language-learning-bot/backend/alembic/: README  env.py  script.py.mako
language-learning-bot/backend/app/: main_backend.py
language-learning-bot/backend/conf/: config.py
language-learning-bot/backend/tests/: conftest.py
language-learning-bot/common/tests/: conftest.py  test_logger.py
language-learning-bot/common/utils/: check_imports.py  font_utils.py  logger.py
language-learning-bot/docs/: architecture.md  backlog.md  directory_structure.md  project_description.md  summary.md
language-learning-bot/docs/ai_gen/: ai_gen.md  ai_image_generation.md  semantic.md
language-learning-bot/docs/api/: api_reference.md  api_writing_image_service.md  backend_api.md
language-learning-bot/scripts/: admin_manager.py  create_user_language_settings_collection.py  db_indexes.py  db_show.py  init_db.py  run_tests.py  seed_data.py  test_opus_support.py  test_voice_recognition.py  update_statistics_index.py
language-learning-bot/writing_images_service/: environment.yml  environment_cpu.yml  environment_gpu.yml  main_writing_service.py  requirements.txt  requirements_cpu.txt  requirements_gpu.txt
(+380 files in other folders)
